# smartsusan

./: CLAUDE.md  speech_detection_tufts.py
arch-cuda/: 00_environment_setup.ipynb  01_data_scraper.ipynb  02_background_removal.ipynb  pyproject.toml
dataset/: bg4
dev/programming/2026/Tufts-ai-final/: background_remover.py  data_scraper.py  dataset_generator.py  image_rec_trainer.py  main.py  run_model.py
marker-training/: README.md  bootstrap.py
marker-training/code/: capture_frames.py  deliver.py  duo.py
marker-training/dataset/: data.yaml
marker-training/dataset/train/labels/: logi_0001.txt  logi_0002.txt  logi_0006.txt  logi_0009.txt  logi_0012.txt  logi_0014.txt  logi_0027.txt  logi_0029.txt  logi_0032.txt  logi_0035.txt  logi_0040.txt  logi_0046.txt  logi_0194.txt  logi_0207.txt  logi_0211.txt  logi_0213.txt  logi_0214.txt  logi_0220.txt  logi_0222.txt  logi_0252.txt  logi_0265.txt  logi_0278.txt  logi_0284.txt  logi_0289.txt
marker-training/dataset/val/labels/: logi_0291.txt  logi_0305.txt  logi_0318.txt  logi_0323.txt  logi_0337.txt  logi_0339.txt  logi_0349.txt  logi_0363.txt  logi_0368.txt  logi_0375.txt  logi_0388.txt  logi_0389.txt  logi_0401.txt  logi_0402.txt  logi_0415.txt
robot/: DEMO.md  autolabel.py  deliver.py  follow.py  frame_view.py  list_cams.py  live.py  llm_deliver.py  snack_server.py  spin.py  synth_gen.py  throttle.py
robot/app/: index.html  package.json
train-scripts/: .gitignore  00_environment_setup.ipynb  01_data_scraper.ipynb  02_background_removal.ipynb  03_dataset_generator.ipynb  04_train_model.ipynb  05_run_inference.ipynb  pyproject.toml  run_live_inference.py  train_full.py
