[project]
name = "smartsusan-arch-cuda"
version = "0.1.0"
description = "Arch Linux + CUDA notebook pipeline for the smartsusan snack detector"
requires-python = ">=3.11"
dependencies = [
    "ultralytics",
    "torch",
    "torchvision",
    "rembg",
    "numba>=0.60",  # pins rembg's pymatting->numba resolution to a build with cp314 wheels;
                    # without this uv/pip resolve numba==0.53.1 (pre-2021, no py3.14 wheel, fails to build)
    "onnxruntime-gpu",
    "pillow",
    "pyyaml",
    "pandas",
    "matplotlib",
    "numpy",
    "opencv-python-headless",
    "selenium",
    "undetected-chromedriver",
    "requests",
    "ipykernel",
]

# If the default PyPI `torch`/`torchvision` wheels don't detect the RTX 5060's
# sm_120 (Blackwell) compute capability (see 00_environment_setup.ipynb, cell
# "torch.cuda.is_available()"), reinstall from the CUDA-specific index instead:
#
#   uv pip uninstall torch torchvision
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
#
# (swap cu128 for whatever is the newest available index at pytorch.org/get-started/locally
# by the time you read this, if sm_120 support has moved to a newer CUDA tag)
